--- a/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/rpns/micro/imputation_sur_le_revenu_global/plafond_deficits_agricoles.yaml
+++ b/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/rpns/micro/imputation_sur_le_revenu_global/plafond_deficits_agricoles.yaml
@@ -40,6 +40,10 @@ values:
     value: 110646
   2019-01-01:
     value: 111752
+  2020-01-01:
+    value: 111976
+  2021-01-01:
+    value: 113544
 metadata:
   short_label: Plafond (déficits agricoles)
   ipp_csv_id: plaf_defba
@@ -109,6 +113,15 @@ metadata:
     2019-01-01:
       title: Loi 2019-1479 du 28/12/2019 (LF pour 2020)
       href: https://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000039683923&categorieLien=id
+    2020-01-01:
+      title: Décret n° 2020-897 du 22 juillet 2020, art. 1
+      href: https://www.legifrance.gouv.fr/affichTexteArticle.do?cidTexte=JORFTEXT000042143201&idArticle=LEGIARTI000042143994&dateTexte=20200805&categorieLien=id#LEGIARTI000042143994
+    2021-01-01:
+      title: Décret n° 2021-744 du 9/06/2021, art 1 modification art 156 CGI (mise à jour CGI)
+      href: https://www.legifrance.gouv.fr/jorf/article_jo/JORFARTI000043641811
+    2022-01-01:
+      title: Décret n° 2022-782 du 4/05/2022
+      href: https://www.legifrance.gouv.fr/jorf/article_jo/JORFARTI000045757192
   official_journal_date:
     1979-01-01: "1980-01-19"
     1988-01-01: "1988-12-28"
@@ -130,6 +143,8 @@ metadata:
     2017-01-01: "2017-12-31"
     2018-01-01: "2019-06-07"
     2019-01-01: "2019-12-29"
+    2020-01-01: "2021-06-11"
+    2021-01-01: "2022-05-06"
   notes:
     1994-01-01:
     - title: Cf. article 156 du Code Général des Impôt pour le plafonnement du déficit foncier global
