--- a/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/charges_deductibles/accueil_personne_agee/plafond.yaml
+++ b/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/charges_deductibles/accueil_personne_agee/plafond.yaml
@@ -70,6 +70,8 @@ values:
     value: 3535
   2020-01-01:
     value: 3542
+  2021-01-01:
+    value: 3592
 metadata:
   short_label: Plafond
   ipp_csv_id: plaf_frais
@@ -190,6 +192,12 @@ metadata:
     2020-01-01:
       title: Loi 2020-1721 du 29/12/2020 (LF pour 2021)
       href: https://www.legifrance.gouv.fr/jorf/id/JORFARTI000042753591
+    2021-01-01:
+      title: Loi 2021-1900, art. 2 du 30/12/2021 (LF pour 2022)
+      href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000044637640
+      title: Décret 2022-782 du 4 mai 2022, art 1 modifiant l'article 156 du CGI et applicant la loi de finance
+      href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000045757184/
+
   official_journal_date:
     1984-01-01: "1984-12-30"
     1985-01-01: "1985-12-31"
@@ -225,6 +233,12 @@ metadata:
     2018-01-01: "2018-12-30"
     2019-01-01: "2019-12-29"
     2020-01-01: "2020-12-30"
+    2021-01-01: "2021-12-31"
+    2022-01-01: "2022-05-06"
+  notes:
+    2022-01-01:
+    - title: La modification est opérée en mai 2022 mais est issue de la loi de finance pour 2022 qui s'applique aux revenus 2021
+
 documentation: |-
   Plafond frais personnes de plus de 75 ans : art. 156-II-2° ter du CGI
   https://www.ipp.eu/baremes-ipp/impot-sur-le-revenu/calcul_revenus_imposables/charg_deduc/
