--- a/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/charges_deductibles/accueil_personne_agee/plafond.yaml
+++ b/openfisca_france/parameters/impot_revenu/calcul_revenus_imposables/charges_deductibles/accueil_personne_agee/plafond.yaml
@@ -193,10 +193,10 @@ metadata:
       title: Loi 2020-1721 du 29/12/2020 (LF pour 2021)
       href: https://www.legifrance.gouv.fr/jorf/id/JORFARTI000042753591
     2021-01-01:
-      title: Loi 2021-1900, art. 2 du 30/12/2021 (LF pour 2022)
-      href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000044637640
-      title: Décret 2022-782 du 4 mai 2022, art 1 modifiant l'article 156 du CGI et applicant la loi de finance
-      href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000045757184/
+      - title: Loi 2021-1900, art. 2 du 30/12/2021 (LF pour 2022)
+      - href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000044637640
+      - title: Décret 2022-782 du 4 mai 2022, art 1 modifiant l'article 156 du CGI et applicant la loi de finance
+      - href: https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000045757184/
 
   official_journal_date:
     1984-01-01: "1984-12-30"
